crates/ruff_linter/src/rules/flake8_cognitive_complexity/snapshots/ruff_linter__rules__flake8_cognitive_complexity__tests__max_cognitive_complexity_3.snap
---
source: crates/ruff_linter/src/rules/flake8_cognitive_complexity/mod.rs
---
CCR001.py:2:5: CCR001 `sumOfPrimes` is too cognitive complex (7 > 3)
  |
1 | # Cognitive Complexity 7
2 | def sumOfPrimes(max: int):
  |     ^^^^^^^^^^^ CCR001
3 |     total = 0
4 |     for i in range(max):  # +1 (nested 0)
  |


